--- a/app/src/main/res/layout/activity_main7.xml
+++ b/app/src/main/res/layout/activity_main7.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context="com.example.quliang.myapplication.ui.Main5Activity">
+    tools:context="com.example.quliang.myapplication.ui.ListViewActivity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="30dp"
