--- a/app/src/main/res/layout/activity_main9.xml
+++ b/app/src/main/res/layout/activity_main9.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.quliang.myapplication.ui.Main5Activity">
+    tools:context="com.example.quliang.myapplication.ui.ListViewActivity">
 
         <TextView
             android:background="#ffff00"
