--- a/app/src/main/res/layout/activity_main7.xml
+++ b/app/src/main/res/layout/activity_main7.xml
@@ -12,11 +12,16 @@
         android:layout_height="30dp"
         android:gravity="center"
         android:text="悬浮的部分1" />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
        >
+
     <android.support.design.widget.AppBarLayout
         app:elevation="0dp"
         android:id="@+id/app_bar"
@@ -29,9 +34,9 @@
             android:layout_width="match_parent"
             android:layout_height="220dp"
             app:contentScrim="#987545"
-            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             >
-
+            <!--app:layout_scrollFlags="scroll|enterAlways"-->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -59,4 +64,5 @@
 
 
 </android.support.design.widget.CoordinatorLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
