--- a/app/src/main/res/layout/activity_annotation1.xml
+++ b/app/src/main/res/layout/activity_annotation1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.quliang.myapplication.ui.WebViewActivity"
+    tools:context="com.example.quliang.myapplication.ui.webnative.WebViewActivity"
     android:orientation="vertical"
     >
 
