--- a/app/src/main/res/layout/activity_file_dir_show.xml
+++ b/app/src/main/res/layout/activity_file_dir_show.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.quliang.myapplication.ui.FileDirShowActivity">
+    tools:context="com.example.quliang.myapplication.ui.shiyan.FileDirShowActivity">
 
     <ListView
         android:id="@+id/list"
