--- a/app/src/main/res/layout/activity_my_camera.xml
+++ b/app/src/main/res/layout/activity_my_camera.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.quliang.myapplication.ui.MyCameraActivity">
+    tools:context="com.example.quliang.myapplication.ui.camera.MyCameraActivity">
 
         <SurfaceView
             android:id="@+id/sfv"
