--- a/app/src/main/res/layout/activity_nfc.xml
+++ b/app/src/main/res/layout/activity_nfc.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.quliang.myapplication.ui.webnative.NFCActivity">
+    tools:context="com.example.quliang.myapplication.ui.shiyan.NFCActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
